# mynd-firmware

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml  (+2 more)
Projects/Mynd/src/: CMakeLists.txt
Projects/Mynd/src/actionslink_stub/: CMakeLists.txt  actionslink.h  actionslink_stub.c  actionslink_types.h
Projects/Mynd/src/battery/battery_indicator/: CMakeLists.txt
Projects/Mynd/src/battery/battery_indicator/tests/: CMakeLists.txt  test_battery_indicator.cpp
Projects/Mynd/src/battery/charge_controller/: CMakeLists.txt
Projects/Mynd/src/battery/charge_controller/tests/: CMakeLists.txt  test_charge_controller.cpp
Projects/Mynd/src/battery/soc_estimator/: CMakeLists.txt
Projects/Mynd/src/board/amps/: board_link_amps.c  board_link_amps.h
Projects/Mynd/src/board/bluetooth/: CMakeLists.txt  board_link_bluetooth.c  board_link_bluetooth_stub.c
Projects/Mynd/src/rpi_link/daemon_install/: README.md  install_rpi_link.sh  mynd-rpi-link.service  mynd_rpi_link.conf  mynd_rpi_link.py  uninstall_rpi_link.sh
Projects/Mynd/src/rpi_link/tools/: README.md  install_rpi_daemon.sh  mynd-rpi-link.service  mynd-rpi-link.sudoers  mynd_rpi_daemon.conf  mynd_rpi_daemon.py
Projects/Mynd/src/tasks/: CMakeLists.txt
Projects/Mynd/src/tasks/audio/: task_audio.cpp
Projects/Mynd/src/tasks/bluetooth/: CMakeLists.txt  task_bluetooth.cpp  task_bluetooth_stub.cpp
Projects/Mynd/src/tasks/rpi/: CMakeLists.txt  task_rpi.cpp  task_rpi.h
Projects/Mynd/src/tasks/system/: task_system.cpp  task_system.h
Projects/Mynd/src/ux/rpi/: rpi.h
Projects/Mynd/src/ux/system/: system.h
(+25 files in other folders)
