add_subdirectory(battery)
add_subdirectory(board)
add_subdirectory(bsp)
add_subdirectory(factory)
add_subdirectory(leds)
add_subdirectory(persistent_storage)
add_subdirectory(tasks)
add_subdirectory(tshell)
if (MYND_RPI_MODIFICATION)
    message(STATUS "Replacing external/teufel/libs/actionslink libs submodule dependencies with local stubs for RPI modification")
    add_subdirectory(actionslink_stub)
endif()
